--- a/2.Data Preprocessing and Wrangling/1.DataCleaning/5.data-cleaning-challenge-inconsistent-data-entry.ipynb
+++ b/2.Data Preprocessing and Wrangling/1.DataCleaning/5.data-cleaning-challenge-inconsistent-data-entry.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "ee54b6ee-0869-438a-9b6f-57c6d67f923f",
     "_uuid": "d2578d4d4bc7e42f5ab6157d9c3eb40e68d42e9b",
@@ -103,10 +103,18 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'encoding': 'Windows-1252', 'confidence': 0.73, 'language': ''}\n"
+     ]
+    }
+   ],
    "source": [
     "# look at the first ten thousand bytes to guess the character encoding\n",
-    "with open(\"../input/PakistanSuicideAttacks Ver 11 (30-November-2017).csv\", 'rb') as rawdata:\n",
+    "with open('/Users/vanshaj/Downloads/day5/PakistanSuicideAttacks Ver 11 (30-November-2017).csv', 'rb') as rawdata:\n",
     "    result = chardet.detect(rawdata.read(100000))\n",
     "\n",
     "# check what the character encoding might be\n",
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "_cell_guid": "0f40ed87-fc61-4a61-b230-6af1f4618114",
     "_uuid": "c82584427932f3f0ccd21c7d1eca92f62476ed0a",
@@ -138,7 +146,7 @@
    "outputs": [],
    "source": [
     "# read in our dat\n",
-    "suicide_attacks = pd.read_csv(\"../input/PakistanSuicideAttacks Ver 11 (30-November-2017).csv\", \n",
+    "suicide_attacks = pd.read_csv('/Users/vanshaj/Downloads/day5/PakistanSuicideAttacks Ver 11 (30-November-2017).csv', \n",
     "                              encoding='Windows-1252')"
    ]
   },
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "_cell_guid": "b3d4b17e-77c4-46d8-9681-a94801969b49",
     "_uuid": "4bced8b6f6a985ded2c991f46ed0145ac1d8b722",
@@ -170,7 +178,38 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ATTOCK', 'Attock ', 'Bajaur Agency', 'Bannu', 'Bhakkar ', 'Buner',\n",
+       "       'Chakwal ', 'Chaman', 'Charsadda', 'Charsadda ', 'D. I Khan',\n",
+       "       'D.G Khan', 'D.G Khan ', 'D.I Khan', 'D.I Khan ', 'Dara Adam Khel',\n",
+       "       'Dara Adam khel', 'Fateh Jang', 'Ghallanai, Mohmand Agency ',\n",
+       "       'Gujrat', 'Hangu', 'Haripur', 'Hayatabad', 'Islamabad',\n",
+       "       'Islamabad ', 'Jacobabad', 'KURRAM AGENCY', 'Karachi', 'Karachi ',\n",
+       "       'Karak', 'Khanewal', 'Khuzdar', 'Khyber Agency', 'Khyber Agency ',\n",
+       "       'Kohat', 'Kohat ', 'Kuram Agency ', 'Lahore', 'Lahore ',\n",
+       "       'Lakki Marwat', 'Lakki marwat', 'Lasbela', 'Lower Dir', 'MULTAN',\n",
+       "       'Malakand ', 'Mansehra', 'Mardan', 'Mohmand Agency',\n",
+       "       'Mohmand Agency ', 'Mohmand agency', 'Mosal Kor, Mohmand Agency',\n",
+       "       'Multan', 'Muzaffarabad', 'North Waziristan', 'North waziristan',\n",
+       "       'Nowshehra', 'Orakzai Agency', 'Peshawar', 'Peshawar ', 'Pishin',\n",
+       "       'Poonch', 'Quetta', 'Quetta ', 'Rawalpindi', 'Sargodha',\n",
+       "       'Sehwan town', 'Shabqadar-Charsadda', 'Shangla ', 'Shikarpur',\n",
+       "       'Sialkot', 'South Waziristan', 'South waziristan', 'Sudhanoti',\n",
+       "       'Sukkur', 'Swabi ', 'Swat', 'Swat ', 'Taftan',\n",
+       "       'Tangi, Charsadda District', 'Tank', 'Tank ', 'Taunsa',\n",
+       "       'Tirah Valley', 'Totalai', 'Upper Dir', 'Wagah', 'Zhob', 'bannu',\n",
+       "       'karachi', 'karachi ', 'lakki marwat', 'peshawar', 'swat'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get all the unique values in the 'City' column\n",
     "cities = suicide_attacks['City'].unique()\n",
@@ -194,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "61651d57-f28c-4b81-bd05-b82720a8ed18",
     "_uuid": "2b604c74492419f89a43262d1f811e272646f9a6",
@@ -224,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "_cell_guid": "3deb3f1b-80e0-4a94-9bf7-1c9cd4882c18",
     "_uuid": "27aeda660f0e95ccb24bf8c5c1e1d5cfb22be7a8",
@@ -234,10 +273,22 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['capital' 'sindh' 'baluchistan' 'punjab' 'fata' 'kpk' 'ajk' 'balochistan']\n"
+     ]
+    }
+   ],
    "source": [
     "# Your turn! Take a look at all the unique values in the \"Province\" column. \n",
-    "# Then convert the column to lowercase and remove any trailing white spaces"
+    "province_values = suicide_attacks['Province'].unique()\n",
+    "print(province_values)\n",
+    "\n",
+    "# Then convert the column to lowercase and remove any trailing white spaces\n",
+    "suicide_attacks['Province'] = suicide_attacks['Province'].str.lower().str.strip()\n"
    ]
   },
   {
@@ -255,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "_cell_guid": "8f20fd24-33a4-472d-ba22-be0abc2a1e5b",
     "_uuid": "1408dacdd7b76f306bd1c0c534b991d76243d7cc",
@@ -265,7 +316,33 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['attock', 'bajaur agency', 'bannu', 'bhakkar', 'buner', 'chakwal',\n",
+       "       'chaman', 'charsadda', 'd. i khan', 'd.g khan', 'd.i khan',\n",
+       "       'dara adam khel', 'fateh jang', 'ghallanai, mohmand agency',\n",
+       "       'gujrat', 'hangu', 'haripur', 'hayatabad', 'islamabad',\n",
+       "       'jacobabad', 'karachi', 'karak', 'khanewal', 'khuzdar',\n",
+       "       'khyber agency', 'kohat', 'kuram agency', 'kurram agency',\n",
+       "       'lahore', 'lakki marwat', 'lasbela', 'lower dir', 'malakand',\n",
+       "       'mansehra', 'mardan', 'mohmand agency',\n",
+       "       'mosal kor, mohmand agency', 'multan', 'muzaffarabad',\n",
+       "       'north waziristan', 'nowshehra', 'orakzai agency', 'peshawar',\n",
+       "       'pishin', 'poonch', 'quetta', 'rawalpindi', 'sargodha',\n",
+       "       'sehwan town', 'shabqadar-charsadda', 'shangla', 'shikarpur',\n",
+       "       'sialkot', 'south waziristan', 'sudhanoti', 'sukkur', 'swabi',\n",
+       "       'swat', 'taftan', 'tangi, charsadda district', 'tank', 'taunsa',\n",
+       "       'tirah valley', 'totalai', 'upper dir', 'wagah', 'zhob'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get all the unique values in the 'City' column\n",
     "cities = suicide_attacks['City'].unique()\n",
@@ -293,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "_cell_guid": "4fdcd726-4a4f-4348-b745-1e42c3338100",
     "_uuid": "a53c6f011f5c9144e9a48f329d5cf15e2feddec8",
@@ -303,7 +380,27 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('d. i khan', 100),\n",
+       " ('d.i khan', 100),\n",
+       " ('d.g khan', 88),\n",
+       " ('khanewal', 50),\n",
+       " ('sudhanoti', 47),\n",
+       " ('hangu', 46),\n",
+       " ('kohat', 46),\n",
+       " ('dara adam khel', 45),\n",
+       " ('chaman', 43),\n",
+       " ('mardan', 43)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get the top 10 closest matches to \"d.i khan\"\n",
     "matches = fuzzywuzzy.process.extract(\"d.i khan\", cities, limit=10, scorer=fuzzywuzzy.fuzz.token_sort_ratio)\n",
@@ -326,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "_cell_guid": "fb2068ed-9f09-47f4-b0e0-7fb97abda373",
     "_uuid": "ba5ad95702b3aa9f30788aa571d0c61f4e8131cc",
@@ -373,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "_cell_guid": "23fd3ac0-f236-45c8-85cb-fad3706b2850",
     "_uuid": "6bcfc2b8f35d07b6c284767789b22974cc05ae18",
@@ -383,7 +480,15 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All done!\n"
+     ]
+    }
+   ],
    "source": [
     "# use the function we just wrote to replace close matches to \"d.i khan\" with \"d.i khan\"\n",
     "replace_matches_in_column(df=suicide_attacks, column='City', string_to_match=\"d.i khan\")"
@@ -401,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "_cell_guid": "730dc89a-30c6-4848-8fe0-a28e259ea427",
     "_uuid": "a8b54015e53fc9d7829266ca5839d6feb920d036",
@@ -411,7 +516,32 @@
     },
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['attock', 'bajaur agency', 'bannu', 'bhakkar', 'buner', 'chakwal',\n",
+       "       'chaman', 'charsadda', 'd.g khan', 'd.i khan', 'dara adam khel',\n",
+       "       'fateh jang', 'ghallanai, mohmand agency', 'gujrat', 'hangu',\n",
+       "       'haripur', 'hayatabad', 'islamabad', 'jacobabad', 'karachi',\n",
+       "       'karak', 'khanewal', 'khuzdar', 'khyber agency', 'kohat',\n",
+       "       'kuram agency', 'kurram agency', 'lahore', 'lakki marwat',\n",
+       "       'lasbela', 'lower dir', 'malakand', 'mansehra', 'mardan',\n",
+       "       'mohmand agency', 'mosal kor, mohmand agency', 'multan',\n",
+       "       'muzaffarabad', 'north waziristan', 'nowshehra', 'orakzai agency',\n",
+       "       'peshawar', 'pishin', 'poonch', 'quetta', 'rawalpindi', 'sargodha',\n",
+       "       'sehwan town', 'shabqadar-charsadda', 'shangla', 'shikarpur',\n",
+       "       'sialkot', 'south waziristan', 'sudhanoti', 'sukkur', 'swabi',\n",
+       "       'swat', 'taftan', 'tangi, charsadda district', 'tank', 'taunsa',\n",
+       "       'tirah valley', 'totalai', 'upper dir', 'wagah', 'zhob'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get all the unique values in the 'City' column\n",
     "cities = suicide_attacks['City'].unique()\n",
